--- a/css/styles.css
+++ b/css/styles.css
@@ -1801,6 +1801,10 @@ table td:nth-child(3) {
     transform: rotate(-5deg);
 }
 
+.product-img.no-rotate {
+    transform: none;
+}
+
 .product-name {
     font-style: italic;
     font-size: 40rem;
