--- a/check.css
+++ b/check.css
@@ -321,7 +321,7 @@ zxing-scanner {
     margin: 0 auto 25px !important;
 }
 
-.angular-uf-button-redirect {
+app-root button {
     position: relative;
     display: flex;
     align-items: center;
@@ -347,6 +347,31 @@ zxing-scanner {
     transform: rotate(-5deg) skewX(-10deg);
 }
 
-.angular-uf-button-redirect:hover {
+app-root button:hover {
     background: #ED1A00;
+}
+
+dropzone {
+    min-height: 156px;
+    border: 2px solid #fff;
+    margin: 0 auto 25px;
+}
+
+app-root dropzone>.dropzone.dz-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #fff;
+    padding: 10px;
+}
+
+app-root dropzone>.dropzone.dz-wrapper .dz-message {
+    border: none;
+    background: none;
+    margin: 3rem 0;
+}
+
+app-root dropzone>.dropzone.dz-wrapper.dz-started .dz-message {
+    order: 1;
+    margin: 20px 0;
 }
